Added testing for reports after payments have been performed + replaced @value of the view models in facade for @getter and @setter